remove app.config from csproj, export XML comments, update readme

--- a/SparkLib/SparkLib.csproj
+++ b/SparkLib/SparkLib.csproj
@@ -45,6 +45,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <DocumentationFile>bin\Release\SparkLib.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup>
     <StartupObject />
@@ -60,9 +61,6 @@
     <Compile Include="TickProviders\MsGothicTickProvider.cs" />
     <Compile Include="Spark.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include=".NETFramework,Version=v4.5">
